--- a/FinLabAct3_FuentesAngeles/App.config
+++ b/FinLabAct3_FuentesAngeles/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="FinLabAct3_FuentesAngeles.Properties.Settings.LaboratoryDBConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\LaboratoryDB.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
