--- a/FinLabAct3_FuentesAngeles/FinLabAct3_FuentesAngeles.csproj
+++ b/FinLabAct3_FuentesAngeles/FinLabAct3_FuentesAngeles.csproj
@@ -71,6 +71,12 @@
     <Compile Include="AdminAccountsForm.Designer.cs">
       <DependentUpon>AdminAccountsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminViewTransactions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminViewTransactions.Designer.cs">
+      <DependentUpon>AdminViewTransactions.cs</DependentUpon>
+    </Compile>
     <Compile Include="BorrowReturnModule.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,12 @@
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PasswordRecovery.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PasswordRecovery.Designer.cs">
+      <DependentUpon>PasswordRecovery.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterAsUser.cs">
@@ -114,6 +126,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminAccountsForm.resx">
       <DependentUpon>AdminAccountsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminViewTransactions.resx">
+      <DependentUpon>AdminViewTransactions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BorrowReturnModule.resx">
       <DependentUpon>BorrowReturnModule.cs</DependentUpon>
@@ -129,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PasswordRecovery.resx">
+      <DependentUpon>PasswordRecovery.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
