--- a/FinLabAct3_FuentesAngeles/FinLabAct3_FuentesAngeles.csproj
+++ b/FinLabAct3_FuentesAngeles/FinLabAct3_FuentesAngeles.csproj
@@ -47,7 +47,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -213,12 +215,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="LabDB.mdf">
+    <Content Include="LaboratoryDB.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="LabDB_log.ldf">
+    <Content Include="LaboratoryDB_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>LabDB.mdf</DependentUpon>
+      <DependentUpon>LaboratoryDB.mdf</DependentUpon>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
