--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/FinLabAct3_FuentesAngeles/LaboratoryDB.mdf
+/FinLabAct3_FuentesAngeles/LaboratoryDB_log.ldf
