--- a/FinLabAct3_FuentesAngeles/FinLabAct3_FuentesAngeles.csproj
+++ b/FinLabAct3_FuentesAngeles/FinLabAct3_FuentesAngeles.csproj
@@ -278,6 +278,15 @@
       <Name>LaboratoryDLL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="LaboratoryDB.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="LaboratoryDB_log.ldf">
+      <DependentUpon>LaboratoryDB.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
