--- a/FinLabAct3_FuentesAngeles/App.config
+++ b/FinLabAct3_FuentesAngeles/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="FinLabAct3_FuentesAngeles.Properties.Settings.LaboratoryDBConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\FinLabAct3_FuentesAngeles\FinLabAct3_FuentesAngeles\LaboratoryDB.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\FinLabAct3_FuentesAngeles\FinLabAct3_FuentesAngeles\LaboratoryDB.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
